  show statistics and query plan for an SQL query.
  Thanks to Martin Weissenborn for the Cache specific requirements

New SQL editor function to delete the current SQL statement.
  Accessible by short cut Ctrl+Shift+Del, tools popup, right mouse menu.
  Note: Corresponding functions to copy (Ctrl+Shift+x) and cut (Ctrl+Shift+x) already exist.


Bug fixes:

Intersystem Cache Plugin bug fix: Whenever a new Session was opened another Session menu items was added.

SQL result's find function -->  Color matches: "No resource found ..." message in coloring dialog's title.

SQL error result tabs can be closed by click on mouse wheel.


4.3.0 (10/02/2021)
==================

Enhancements:

Introduced Java 17 compatibility.

Table's right mouse menus now offers to color selected cells.

SQL result's find function: New option to color matched cells.

Improved import file dialog UI: When an import table is preselected a new label above the "Suggest new table"
  button is explains:
  "Inserting into table '<preselected import table>'. To create a new table instead click 'Suggest new table'."

When reading data from a column of type NCLOB the same rules are applied
  as when columns of type CLOB are read.
  See menu File --> Global Preference --> tab "Data Type Controls"

When the Object tree is searched the Session's status displays a progress bar with a stop button.

New Plugin "High resolution icon"
  Provides high resolution icons for  HiDPI screens.
  Thanks to Stanimir Stamenkov for merge request #80 on which this Plugin is based.

Merge Request #81: Show selected Alias's JDBC URL in the main window's status bar
  Thanks to Stanimir Stamenkov for the merge request.

SQL Result: The "Mark duplicates ..." function has two new  modes:
   - Duplicate cells in row
   - Duplicate consecutive cells in row
  Improved switching between lighter and darker duplicate color.

Merge Request #78 Derby Plugin: When the Derby Plugin is installed it sets the JVM property derby.system.home